# hdoc_voice

./: .dockerignore  .gitignore  019_Why_You_Wouldn't_Survive_a_Day_as_Henry_VIII's_Groom_of_the.docx  Dockerfile  compose.yaml  pyproject.toml  Текстовый документ.txt
fish_audio_docks/: create_model.md  delete_model.md  errors.md  exceptions.md  get_model.md  introduction.md  list_model.md  python_sdk_overview.md  text_to_speech.md  tracing.md  tts_websocket.md  tts_with_timestamps.md  update_model.md  voice_design.md
fish_audio_docks/reference/: client.md  core.md  resources.md  types.md  utils.md
src/: bot.py  main.py  settings.py  voicer_client.py  voices.py
src/handlers/: __init__.py  common.py  tts.py
src/keyboards/: voices.py
src/middlewares/: services.py  tts_service.py
src/services/: queue.py  tts.py
src/states/: tts.py
