[project]
name = "hdoc-voice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.29.0",
    "httpx>=0.27",
    "loguru>=0.7.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "lxml>=5.0",
    "python-docx>=1.2.0",
    "fish-audio-sdk>=0.1.0",
]

[tool.uv.sources]
fish-audio-sdk = { git = "https://github.com/fishaudio/fish-audio-python.git" }
